<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick Graph</string>
    <string name="activity_project">Projects</string>
    <string name="activity_data_set_list">DataSets</string>
    <string name="activity_graph">Graphic</string>

    <string name="fab_manual_hide_behavior" translatable="false">com.shlom.solutions.quickgraph.ui.FabManualHideBehavior</string>
    <string name="fab_scrolling_view_behavior" translatable="false">com.shlom.solutions.quickgraph.ui.ScrollingFABBehavior</string>
    <string name="tag_main_fragment" translatable="false">main_fragment</string>
    <string name="linear_layout_manager" translatable="false">android.support.v7.widget.LinearLayoutManager</string>
    <string name="grid_layout_manager" translatable="false">android.support.v7.widget.GridLayoutManager</string>
    <string name="staggered_layout_manager" translatable="false">android.support.v7.widget.StaggeredGridLayoutManager</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_all">Clear</string>
    <string name="action_check_all">Check all</string>
    <string name="action_uncheck_all">Uncheck all</string>
    <string name="action_axis">Axis</string>
    <string name="action_grid">Grid</string>
    <string name="action_x_axis">X-axis</string>
    <string name="action_y_axis">Y-axis</string>
    <string name="action_x_grid">X-grid</string>
    <string name="action_y_grid">Y-grid</string>
    <string name="action_title">Title</string>
    <string name="action_draw">Draw</string>
    <string name="action_draw_axis_labels">Draw labels</string>
    <string name="action_draw_legend">Draw legend</string>
    <string name="action_fit_screen">Fit screen</string>
    <string name="action_color">Color</string>
    <string name="action_color_background">Background color</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_hide">Hide</string>
    <string name="action_undo">Undo</string>
    <string name="action_retry">Retry</string>
    <string name="action_demo_project">Demo project</string>
    <string name="action_import">Import</string>
    <string name="action_select_file">Select file</string>
    <string name="action_select_data_type">Select data type</string>
    <string name="action_create_file">Create file</string>
    <string name="action_export_to_png">Export to png</string>

    <string name="error">Error</string>
    <string name="error_enter">Enter</string>
    <string name="error_incorrect_function">Incorrect function</string>
    <string name="error_need_file_manager">You need file manager</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_file_read">Failed to read the file</string>
    <string name="error_file_write">Failed to write the file</string>
    <string name="error_file_empty">Points not found</string>
    <string name="error_required_permission">Required permissions</string>

    <string name="unknown">Unknown</string>
    <string name="unknown_is">Unknown: %1$s</string>

    <string name="project_creation">Project creation</string>
    <string name="project_enter_name">Enter the name</string>
    <string name="project_date">Last edit: %1$s</string>
    <string name="project_remove">Project \"%1$s\" removed</string>
    <string name="project_remove_count">Projects removed: %1$s</string>
    <string name="project_generate_demo">Generation demo data&#8230;</string>
    <string name="data_set">DataSet</string>
    <string name="data_set_remove">DataSet \"%1$s\" removed</string>
    <string name="data_set_remove_count">DataSets removed: %1$s</string>
    <string name="color_picker_title">Choose color</string>
    <string name="data_set_type_from_table">From table</string>
    <string name="data_set_type_from_function">From function</string>
    <string name="table_is">Table of %1$s rows</string>
    <string name="table_is_imported">Imported from: \"%1$s\"</string>
    <string name="function">Function</string>
    <string name="function_is">Function: %1$s</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="delta">Delta</string>
    <string name="label">Label</string>
    <string name="line_width">Stroke width: %1$s</string>
    <string name="point_radius">Points radius: %1$s</string>
    <string name="draw_line">Draw line</string>
    <string name="cubic_curve">Cubic curve</string>
    <string name="draw_points">Draw points</string>
    <string name="draw_points_label">Draw points label</string>
    <string name="can_empty">It may be empty</string>
    <string name="import_from_txt">From text file</string>
    <string name="import_from_csv">From csv file</string>
    <string name="import_from_excel">From excel file</string>
    <string name="export_preview">Export preview</string>
    <string name="export_resolution_label">Image resolution</string>
    <string name="export_resolution">%1$sx%2$s</string>

</resources>
