<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_axis"
        android:icon="@drawable/ic_axes_black_24dp"
        android:title="@string/action_axis"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_x_axis"
                android:icon="@drawable/ic_axes_x_black_24dp"
                android:title="@string/action_x_axis"
                app:showAsAction="ifRoom">
                <menu>
                    <item
                        android:id="@+id/action_draw_x_axis_labels"
                        android:checkable="true"
                        android:title="@string/action_draw_axis_labels"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/action_draw_x_axis"
                        android:checkable="true"
                        android:title="@string/action_draw"
                        app:showAsAction="never"/>
                    <group android:id="@+id/group_draw_x_axis">
                        <item
                            android:id="@+id/action_color_x_axis"
                            android:title="@string/action_color"
                            app:showAsAction="never"/>
                        <item
                            android:id="@+id/action_draw_x_axis_name"
                            android:title="@string/action_title"
                            app:showAsAction="never"/>
                    </group>
                </menu>
            </item>
            <item
                android:id="@+id/action_y_axis"
                android:icon="@drawable/ic_axes_y_black_24dp"
                android:title="@string/action_y_axis"
                app:showAsAction="ifRoom">
                <menu>
                    <item
                        android:id="@+id/action_draw_y_axis_labels"
                        android:checkable="true"
                        android:title="@string/action_draw_axis_labels"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/action_draw_y_axis"
                        android:checkable="true"
                        android:title="@string/action_draw"
                        app:showAsAction="never"/>
                    <group android:id="@+id/group_draw_y_axis">
                        <item
                            android:id="@+id/action_color_y_axis"
                            android:title="@string/action_color"
                            app:showAsAction="never"/>
                        <item
                            android:id="@+id/action_draw_y_axis_name"
                            android:title="@string/action_title"
                            app:showAsAction="never"/>
                    </group>
                </menu>
            </item>
        </menu>
    </item>
</menu>