<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:contentPadding="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_data_set_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.shlom.solutions.quickgraph.ui.BackEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/function"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_data_set_function_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <com.shlom.solutions.quickgraph.ui.BackEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/from"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_data_set_function_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <com.shlom.solutions.quickgraph.ui.BackEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/to"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_data_set_function_delta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <com.shlom.solutions.quickgraph.ui.BackEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/delta"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>